micronfig_macros/tests/sources/wrong_syntax_colon.stderr
error: expected one of: `for`, parentheses, `fn`, `unsafe`, `extern`, identifier, `::`, `<`, `dyn`, square brackets, `*`, `&`, `!`, `impl`, `_`, lifetime
 --> tests/sources/wrong_syntax_colon.rs:2:13
  |
2 |     GARASAUTO: ,
  |                ^

error[E0425]: cannot find function, tuple struct or tuple variant `GARASAUTO` in this scope
 --> tests/sources/wrong_syntax_colon.rs:6:19
  |
6 |     println!("{:?}", GARASAUTO())
  |                      ^^^^^^^^^ not found in this scope
